<resources>
    <string name="app_name">TheMovieDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="duration">Duration</string>
    <string name="trailer">Trailer</string>
    <string name="overview">Overview</string>
    <string name="review">Review</string>
    <string name="name">Name</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="genre">Action</string>
    <string name="no_review">No review has been posted</string>
</resources>