<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="230dp">

            <ImageView
                android:id="@+id/img_banner"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@color/gray"
                android:fadingEdge="horizontal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="@drawable/fade_image_background"/>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="18dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="sans-serif-medium"
            app:autoSizeTextType="uniform"/>

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:text="@string/duration"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="18dp"
            android:text="@string/trailer"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:textSize="22sp"/>

        <fragment
            android:id="@+id/yt_trailer"
            android:name="com.google.android.youtube.player.YouTubePlayerFragment"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="18dp"
            android:text="@string/overview"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:text="@string/overview"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="18dp"
            android:text="@string/review"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:textSize="22sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_review" />

        <TextView
            android:id="@+id/tv_no_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="18dp"
            android:text="@string/no_review"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>